# OKVS

./: CMakeLists.txt  Defines.h  Paxos.h  PaxosImpl.h  PxUtil.h  README.md  SimpleIndex.h  main.cpp
